# db-utils

./: .gitignore  .pre-commit-config.yaml  .rgignore  README.md  install.sh  justfile  pyproject.toml  requirements.txt
db_utils/: cli.py  cli_utils.py  config.py  enums.py  exceptions.py  main.py  url.py  utils.py
db_utils/autogen/: cli.py  ddl_generator.py  pydantic_basemodel_generator.py  sqla_cli.py
db_utils/inspect/: cli.py  enums.py  inspect.py  main.py  table.py
db_utils/inspect/table/: cli.py  main.py
db_utils/run/: cli.py  datatable.py  schemas.py
db_utils/sqlalchemy_utils/: pydantic_basemodel_generator.py  sqla_cli.py
db_utils/url/: cli.py  enums.py  main.py
db_utils/viewgen/: trigger_generator.py  viewgen_cli.py
templates/: template_trigger_update  template_try_catch
tests/: conftest.py  test_query_parser.py  test_table_schema.py  test_url.py
tests/data/: queries.sql
