[tool.poetry]
name = "db_utils"
version = "0.0.1"
description = "CLI para utilidades de base de datos"
authors = ["Cristobal <cristobaljvp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"
SQLAlchemy = "^1.4.37"
python-dotenv = "^0.20.0"
typer-cli = "^0.0.12"
colorama = "^0.4.5"
pyodbc = "^4.0.32"
nltk = "^3.7"
sqlparse = "^0.4.2"
pydantic = "^1.9.1"
sqlacodegen = "^2.3.0"
stringcase = "^1.2.0"
PyPika = "^0.48.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
autoflake = "^1.4"
isort = "^5.10.1"
setuptools = "^62.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbu = 'db_utils.cli:app'
